[package]
name = "ledger_ls"
version = "0.1.0"
edition = "2021"

[dependencies]
pest_derive = "2.7.15"
tokio = { version = "1.43.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
tree-sitter = "0.20.7"
tree-sitter-ledger = { path = "./tree-sitter-ledger" }

[build-dependencies]
cc="*"
